2000-11-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/hidden3d.c (split_line_at_ratio): Changed parameters.
	(draw_edge): Changed parameters.
	(handle_edge_fragment): Changed parameters. Avoid checking same
 	polygon against the recursing edge again. Don't allocate fresh
 	edge.
	(in_front): Changed parameters. Don't modify contents of 'edge'
 	passed in. Rather pass around vertex data separately. Revised some
 	of the tests to fix almost all currently known display bugs.

2000-11-08  Johannes Zellner  <johannes@zellner.org>

	* docs/gnuplot.doc, pm3d/README: included tgif as supported

2000-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/specfun.c (f_lambertw): set 'undefined' to TRUE
	if lambertw returns error condition.

	* src/specfun.c (lambertw): restructured a bit, removed fall-off
 	without a return value, avoided FP equality comparison.

2000-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	From Gunter Kuhnle <gunter@tux.biow.uni-leipzig.de>:

	* src/specfun.c (f_lambertw): new function.
	(lambertw): new function.

	* src/eval.c (ft): added entry for lambertw

	* docs/gnuplot.doc: document new function lambertw

2000-11-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Use variables in place of "gnuplot" (GNUPLOT)
	and "all.dem" (DEMO) to allow more fine-grained control over what is
	run with "make check". Regenerate Makefile.am.

2000-11-06  Ian MacPhedran  <Ian_MacPhedran@engr.USask.Ca>

	* term/tgif.trm: Add PM3D support.

2000-11-06  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c: Patch from Pieter-Tjerk de Boer to make
	gnuplot_x11 recognizing if the main program died.

2000-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm: fixed /h definition for pm3d gray palette 

2000-11-03  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/Makefile.dst, lisp/Makefile.in, lisp/gnuplot.el,
	lisp/gpelcard.tex: Update to gnuplot-mode 0.5k (long overdue).
