@@ -1,3 +1,7 @@
+2000-11-09  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/color.c, src/pm3d.c: allow pm3d compile without pslatex
+
 2000-11-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/hidden3d.c (split_line_at_ratio): Changed parameters.
